src/objects/Case_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Contacts</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>TEXT(Contact__r.Contact_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Contacts</relationshipLabel>
        <relationshipName>Case_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Contact</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Case Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>